--- a/form_app/templates/index.html
+++ b/form_app/templates/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Index Page</h1>
+    <h1>Form Page</h1>
     <h3>Create a User</h3>
     <form action='/users' method='post'>
         {% csrf_token %}
